# planDD

./: .gitignore  CMakeLists.txt  Makefile  README.md  after_reorder.dot  befor_reorder.dot  custom.txt  custom_force.txt  execute_visualize.sh  force.txt  old.txt  testi_childsnack  testi_gripper  tests.txt  val.txt
contrib/cudd-3.0.0/: .gitignore  Makefile.in  config.h  configure
contrib/libsdd-2.0/: SConstruct
dependencies/cudd-3.0.0/: Makefile  config.status  tutorial  tutorial.c
dependencies/cudd-3.0.0/cplusplus/: test.tst
dependencies/libsdd-2.0/: .sconsign.dblite  SConstruct
include/: bdd_container.h  bdd_manager.h  bottom_up.h  cnf.h  cnf_encoder.h  compiler.h  dd_buildable.h  dd_builder.h  dd_builder_conjoin_order.h  dd_builder_topk.h  dd_builder_variable_order.h  encoder.h  encoder_abstract.h  encoder_basic.h  encoder_binary_parallel.h  force.h  graph.h  logging.h  logic_primitive.h  options.h  order_visualization.h  planDD.h  plan_to_cnf_map.h  planning_logic_formula.h  sas_parser.h  sdd_container.h  sdd_manager.h  variable_creation.h  variable_grouping.h
src/: bdd_conatiner.cpp  bdd_container.cpp  bdd_manager.cpp  bottom_up.cpp  cnf.cpp  cnf_encoder.cpp  dd_builder.cpp  dd_builder_conjoin_order.cpp  dd_builder_topk.cpp  dd_builder_variable_order.cpp  encoder_basic.cpp  encoder_binary_parallel.cpp  force.cpp  graph.cpp  logging.cpp  logic_primitive.cpp  main.cpp  options.cpp  order_visualization.cpp  planDD.cpp  plan_to_cnf_map.cpp  planning_logic_formula.cpp  sas_parser.cpp  sdd_container.cpp  sdd_manager.cpp  variable_creation.cpp  variable_grouping.cpp
test_output/: .gitignore  best17_5_big_test.pkl  easy_optimal_downward_test.pkl  easy_optimal_planDD_test.pkl  small_easy_optimal_planDD_test.pkl
test_output/big_interleaved/: .gitignore  interleaved_small_0.pkl  interleaved_small_1.pkl  interleaved_small_10.pkl  interleaved_small_100.pkl  interleaved_small_101.pkl  interleaved_small_102.pkl  interleaved_small_103.pkl  interleaved_small_104.pkl  interleaved_small_105.pkl  interleaved_small_106.pkl  interleaved_small_107.pkl  interleaved_small_108.pkl  interleaved_small_109.pkl  interleaved_small_11.pkl  interleaved_small_110.pkl  interleaved_small_111.pkl  interleaved_small_112.pkl  interleaved_small_113.pkl  interleaved_small_114.pkl  interleaved_small_115.pkl  interleaved_small_116.pkl  interleaved_small_117.pkl  interleaved_small_118.pkl  interleaved_small_119.pkl  interleaved_small_12.pkl  interleaved_small_120.pkl  interleaved_small_121.pkl  interleaved_small_122.pkl  interleaved_small_123.pkl  interleaved_small_124.pkl  interleaved_small_125.pkl  interleaved_small_126.pkl  interleaved_small_127.pkl  interleaved_small_128.pkl  interleaved_small_129.pkl  interleaved_small_13.pkl  interleaved_small_130.pkl  interleaved_small_131.pkl  interleaved_small_132.pkl  (+501 more)
test_output/variable_order_no_ladder/: variable_order_no_ladder_0.pkl  variable_order_no_ladder_1.pkl  variable_order_no_ladder_10.pkl  variable_order_no_ladder_11.pkl  variable_order_no_ladder_12.pkl  variable_order_no_ladder_13.pkl  variable_order_no_ladder_14.pkl  variable_order_no_ladder_15.pkl  variable_order_no_ladder_16.pkl  variable_order_no_ladder_17.pkl  variable_order_no_ladder_18.pkl  variable_order_no_ladder_19.pkl  variable_order_no_ladder_2.pkl  variable_order_no_ladder_20.pkl  variable_order_no_ladder_21.pkl  variable_order_no_ladder_22.pkl  variable_order_no_ladder_23.pkl  variable_order_no_ladder_24.pkl  variable_order_no_ladder_25.pkl  variable_order_no_ladder_26.pkl  variable_order_no_ladder_27.pkl  variable_order_no_ladder_28.pkl  variable_order_no_ladder_29.pkl  variable_order_no_ladder_3.pkl  variable_order_no_ladder_30.pkl  variable_order_no_ladder_31.pkl  variable_order_no_ladder_4.pkl  variable_order_no_ladder_5.pkl  variable_order_no_ladder_6.pkl  variable_order_no_ladder_7.pkl  variable_order_no_ladder_8.pkl  variable_order_no_ladder_9.pkl
test_scripts/: .gitignore  all_commands.sh  all_commands.txt  benchmark_generation.py  compare_suites.py  compile_planDD_statistics.py  conflic_graph.py  dom_coverages.tab  extract_information.py  extract_information_from_planDD.py  extract_planDD_information.py  generate_planDD_tests.py  generate_run_script.py  generate_runwatch_file.py  info.pkl  only_blocks.txt  only_movie.txt  pgf_plot_gen.py  planDD_test_suites.py  planDD_test_util_arguments.py  planDD_test_util_commandfile.py  planDD_test_util_general.py  planDD_test_util_problems.py  plot_data.py  test_script.py
(+1488 files in other folders)
